# anki-api

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  LICENSE  NEWLINE_ISSUE_INVESTIGATION.md  README.md  ROADMAP.md  _typos.toml  pyproject.toml  reformat_cards.py  scrape.sh
.agents/commands/: create-anki-cards.md
.claude/commands/: create-anki-cards.md
.claude/skills/create-anki-cards/: SKILL.md
.claude/skills/create-anki-cards/rules/: EAT_FRAMEWORK.md  MATH_NOTATION.md
.claude/skills/create-anki-cards/scripts/: save_cards.py
.gemini/commands/: create-anki-cards.toml
cards/: .gitignore
docs/: AI Flashcard Design Framework Research.md
examples/: agent_workflow.md
notes/: bluedot-ai-technical-safety-week1.md
scraped/: .gitignore
src/: anki_client.py  cli.py  documents.py  schema.py  youtube.py
src/cli/: __init__.py  anki_lifecycle.py  output.py  server.py  tmux.py  utils.py
src/cli/commands/: cards.py  diagnostics.py  orchestration.py
tests/: test_documents.py  test_schema.py  test_youtube.py
web/: __init__.py
web/backend/: __init__.py  main.py  models.py
web/backend/routes/: anki.py  cards.py  files.py  generate.py
web/frontend/: biome.json  index.html  knip.json  package.json  pnpm-lock.yaml
web/frontend/src/: App.tsx  index.css  mathjaxConfig.ts
web/frontend/src/api/: client.ts
web/frontend/src/components/: CardDisplay.module.css  CardDisplay.tsx  CardEditor.module.css  CardEditor.tsx  CardGeneration.module.css  CardGeneration.tsx  CardReview.module.css  CardReview.tsx  FileBrowser.module.css  FileBrowser.tsx  FileSelector.module.css  FileSelector.tsx  GenerateModal.module.css  GenerateModal.tsx  MathJaxContent.tsx  Summary.module.css  Summary.tsx  ValidationWarnings.module.css  ValidationWarnings.tsx
web/frontend/src/hooks/: useReviewSession.ts
web/frontend/src/types/: index.ts
