[project]
name = "anki-api"
version = "0.1.0"
description = "Agent-assisted Anki flashcard generation system"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31.0",
    "pydantic>=2.0.0",
    "click>=8.1.0",
    "python-docx>=1.2.0",
]

[project.scripts]
anki = "src.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
]
